--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -20,8 +20,8 @@
 }
 
 .footer-subscription > p {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 .footer-subscription-heading {
@@ -117,7 +117,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 240px;
+  width: 100px;
 }
 
 .social-logo {
@@ -134,7 +134,6 @@
 
 .website-rights {
   color: #fff;
-  margin-bottom: 16px;
 }
 
 @media screen and (max-width: 820px) {
