--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,15 +1,27 @@
 .cards {
   padding: 4rem;
-  background: #fff;
+  background: black;
+}
+
+h1,
+p {
+  text-align: center;
+  color: #b1b1b1;
 }
 
 h1 {
-  text-align: center;
+  margin-top: 80px;
+}
+
+p {
+  margin: 50px 20%;
+  margin-bottom: 90px;
+  font-size: 20px;
 }
 
 .cards__container {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   align-items: center;
   max-width: 1120px;
   width: 90%;
@@ -23,6 +35,14 @@ h1 {
 
 .cards__items {
   margin-bottom: 24px;
+  display: flex;
+  flex-direction: row;
+}
+
+.cards__items2 {
+  margin-bottom: 24px;
+  display: flex;
+  flex-direction: row;
 }
 
 .cards__item {
@@ -30,6 +50,7 @@ h1 {
   flex: 1;
   margin: 0 1rem;
   border-radius: 10px;
+  margin-top: 20px;
 }
 
 .cards__item__link {
@@ -46,28 +67,13 @@ h1 {
 
 .cards__item__pic-wrap {
   position: relative;
-  width: 100%;
-  padding-top: 67%;
+  width: 600px;
   overflow: hidden;
 }
 
 .fade-img {
   animation-name: fade-img;
   animation-duration: 2s;
-}
-
-.cards__item__pic-wrap::after {
-  content: attr(data-category);
-  position: absolute;
-  bottom: 0;
-  margin-left: 10px;
-  padding: 6px 8px;
-  max-width: calc((100%) - 60px);
-  font-size: 12px;
-  font-weight: 700;
-  color: #fff;
-  background-color: #1f98f4;
-  box-sizing: border-box;
 }
 
 .cards__item__img {
@@ -94,7 +100,7 @@ h1 {
 }
 
 .cards__item__text {
-  color: #252e48;
+  color: #b1b1b1;
   font-size: 18px;
   line-height: 24px;
 }
@@ -115,4 +121,10 @@ h1 {
   .cards__item {
     margin-bottom: 2rem;
   }
+}
+
+i {
+  margin: 40px;
+  margin-top: 100px;
+  margin-bottom: 200px;
 }
