--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background-color: #242424;
+  background-color: black;
   padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
@@ -96,7 +96,7 @@
 /* Social Icons */
 .social-icon-link {
   color: #fff;
-  font-size: 24px;
+  font-size: 60px;
 }
 
 .social-media {
@@ -134,6 +134,7 @@
 
 .website-rights {
   color: #fff;
+  font-size: 20px;
 }
 
 @media screen and (max-width: 820px) {
