--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -19,7 +19,7 @@
 }
 
 .navbar-logo {
-  color: #7510f7;
+  color: #b1b1b1;
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
@@ -50,7 +50,7 @@
 }
 
 .nav-links {
-  color: #7510f7;
+  color: #b1b1b1;
   display: flex;
   align-items: center;
   text-decoration: none;
